added hover effect for menu buttons and logo/name

--- a/style.css
+++ b/style.css
@@ -7,3 +7,11 @@
   background-color: var(--impact-blue) !important;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+.navbar-brand:hover {
+  color: var(--impact-orange) !important;
+}
+
+.nav-link:hover {
+  color: var(--impact-orange) !important;
+}
